<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <ImageView
                android:id="@+id/registration_logo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/numap_logo" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title_login"
                android:text="@string/title_login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title2_login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/register_icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/register_icon"
                app:srcCompat="@drawable/register" />

            <EditText
                android:id="@+id/input_register_username"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_username"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/input_register_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/input_register_cellphone"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_cellphone"
                android:inputType="number|phone"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/input_register_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/input_register_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/btn_register_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#5A5A5A"
                android:text="@string/btn_register"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/btn_register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#5A5A5A"
                android:text="@string/btn_register_login"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>